12-argo-rollouts-blue-green/blue-green-manifests/rollout.yaml
kind: Service
apiVersion: v1
metadata:
  name: rollout-bluegreen-active                              # name of the active service
spec:
  selector:
    app: blue-green-deployment                                # label selector
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000

---
kind: Service
apiVersion: v1
metadata:
  name: rollout-bluegreen-preview                            # name of the preview service
spec:
  selector:
    app: blue-green-deployment                               # label selector
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
